tried to deploy to nodejitsu, not working

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,11 +41,13 @@
 		
 		<br>
 		
-		<p>Need an account?</p>
-		<a href='#sign_up' data-role='button' data-inline='true'>Sign Up!</a>
+		<div style='text-align: center;'>
+			<p>Need an account?</p>
+			<a href='#sign_up' data-role='button' data-inline='true'>Sign Up!</a>
 		
-		<p>About TripPlannr</p>	
-		<a href='#help' data-role='button' data-inline='true'>Learn about us...</a>	
+			<p>About TripPlannr</p>	
+			<a href='#help' data-role='button' data-inline='true'>Learn about us...</a>	
+		</div>
 
 </div>
 
@@ -58,31 +60,24 @@
 	<div data-role="collapsible-set">
 		<div data-role="collapsible" data-collapsed="true">
 			<h3>What is TripPlannr?</h3>
-			<p>I'm the collapsible set content for section 1.</p>
+			<p>
+				I'm the collapsible set content for section 1.
+			</p>
 		</div>
 		
 		<div data-role="collapsible">
 			<h3>What's the point?</h3>
-			<p><b>REDUCES TIRED LEGS!</b>
-				<br>
-				<br>
-				Ever been walking around a city wanting to see all 
-				there is to see and realize that your legs just couldn't do it. 
+			<p>
 				TripPlannr will optimize your trip so that you walk shorter 
 				distances and see more.
-				
 			</p>
 		</div>
 		
 		<div data-role="collapsible">
 			<h3>Can I use TripPlannr on the go?</h3>
-			<p><b>YES!</b>
-				<br>
-				<br>
+			<p>
 				TripPlannr is actually designed for mobile devices.
-				We thought that you would benefit from being able to 
-				take your trips on the go.  Anywhere you can find a network 
-				connection TripPlannr is there.
+				You can take your trips on the go.
 			</p>
 		</div>
 	</div>
