--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,7 +37,7 @@
 			<input type="submit" value="Login" />
 		</form>
 		
-		<div class="error"></div>
+		<div id="error_on_log_in"></div>
 		
 		<br>
 		
@@ -51,6 +51,11 @@
 
 </div>
 
+
+<!-- --------------------------------------------------------- -->
+
+<!-- About Us Page ---------------------------------- -->
+
 <div data-role='page' id='help' data-theme='a'>
 	
 	<div data-role="header">
@@ -61,7 +66,9 @@
 		<div data-role="collapsible" data-collapsed="true">
 			<h3>What is TripPlannr?</h3>
 			<p>
-				I'm the collapsible set content for section 1.
+				TripPlannr will do the planning for you.  Just 
+				enter what you want to see and you will get the 
+				best route to see it all.
 			</p>
 		</div>
 		
@@ -102,7 +109,7 @@
 		<input type="submit" value="Sign Up" />
 	</form>
 		
-	<div class="error"></div>
+	<div id="error_on_sign_up"></div>
 </div>
 
 <!-- ----------------------------------------------- -->
@@ -121,7 +128,7 @@
 	   			<h3>Plan a trip.</h3>
 	   			<p>Enter a city to start planning.</p>
 	   			<input type="text" id="city" />
-	   			<button id = "start_planning">Start planning!</button>
+	   			<a href='#start_stop' data-role='button'>Start planning!</a>
 			</div>
 			
 			<div data-role="collapsible">
@@ -136,6 +143,22 @@
 
 <!-- ----------------------------------------------- -->
 
+<!-- Start and End Locations ----------------------- -->
+
+
+<div data-role="page" id="start_stop" data-theme="a">
+	<div data-role="header">
+		<h1>TripPlannr</h1>
+	</div><!-- /header -->
+	
+	<input type='text' id='start_point' placeholder='start point' value='heinz field'/>
+	<input type='text' id='end_point' placeholder='end point' value='south side cheesecake factory'/>
+	<button id = "start_planning">Now pick your midpoints.</button>
+	
+</div>
+
+<!-- ----------------------------------------------- -->
+
 <!-- Select Categories Page ---------------------------------- -->
 
 <div data-role="page" id="categories" data-theme="a">
@@ -145,7 +168,6 @@
 	</div><!-- /header -->
 		
 		<form id="categoryForm">
-			<input type='hidden' id="hidden_city" value='' />
 			<label><input type="checkbox" id="collegeuniv" /> Colleges & Universities </label>
 			<label><input type="checkbox" id="landmarks" /> Landmarks </label>
 			<label><input type="checkbox" id="movietheaters" /> Movie Theaters </label>
