sorted lists of attractions

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -182,20 +182,8 @@
 <!-- ----------------------------------------------- -->
 
 
-<!-- Select Attractions Page ---------------------------------- -->
+<!-- Select Attractions Page is created in trip_forms.js ---------------------------------- -->
 
-<div data-role="page" id="attractions" data-theme="a">
-	
-	<!-- /header -->
-	<div data-role="header" data-id="attractionsBar" data-position="fixed">
-		<div data-role="navbar">
-			<ul class="attractionsList">
-				
-			</ul>
-		</div>
-	</div>
-
-</div>
 
 <!-- ----------------------------------------------- -->
 
