code commented, desktop version added, started local sessions

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -198,13 +198,15 @@
 	
 	<div id="mapLocation"></div>
 	
+	<div id="directionsList">
 			
-	<div>
+	</div>	
+			
+	<div id="saveTripDiv">
 		<div data-role="fieldcontain" class="ui-hide-label">
 			<label for="tripName">Name of Trip:</label>
 			<input type='text' name='tripName' id='tripName' placeholder='trip name' />
 		</div>
-		
 		<a href data-role='button' id="saveTrip">Save Your Trip</a>
 	</div>
 	
