removed test values that were in input fields

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,11 +28,11 @@
 		<form id="login">
 			<div data-role="fieldcontain" class="ui-hide-label">
 				<label for="username">Username:</label>
-				<input type="text" name="username" id="username" placeholder="Username" value='mike'/>
+				<input type="text" name="username" id="username" placeholder="Username" />
 			</div>
 			<div data-role="fieldcontain" class="ui-hide-label">
 				<label for="password">Password:</label>
-				<input type="text" name="password" id="password" placeholder="Password" value='mike'/>
+				<input type="text" name="password" id="password" placeholder="Password" />
 			</div>
 			<input type="submit" value="Login" />
 		</form>
@@ -127,7 +127,7 @@
 			<div data-role="collapsible">
 	   			<h3>Plan a trip.</h3>
 	   			<p>Enter a city to start planning.</p>
-	   			<input type="text" id="city" value='pittsburgh' />
+	   			<input type="text" id="city" />
 	   			<a href='#start_stop' data-role='button'>Start planning!</a>
 			</div>
 			
@@ -150,8 +150,8 @@
 		<h1>TripPlannr</h1>
 	</div><!-- /header -->
 	
-	<input type='text' id='start_point' placeholder='start point' value='heinz field'/>
-	<input type='text' id='end_point' placeholder='end point' value='south side cheesecake factory'/>
+	<input type='text' id='start_point' placeholder='start point' />
+	<input type='text' id='end_point' placeholder='end point' />
 	<label><input type="checkbox" id="walking" /> Walking </label>
 	<label><input type="checkbox" id="driving" /> Driving </label>
 	<button id = "start_planning">Now pick your midpoints.</button>
