added total trip time to list on map page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -154,7 +154,7 @@
 	<input type='text' id='end_point' placeholder='end point' />
 	<label><input type="checkbox" id="walking" /> Walking </label>
 	<label><input type="checkbox" id="driving" /> Driving </label>
-	<button id = "start_planning">Now pick your midpoints.</button>
+	<button id = "start_planning">Now pick your stops in between.</button>
 	
 </div>
 
