--- a/views/home.ejs
+++ b/views/home.ejs
@@ -157,6 +157,7 @@
 	<div id='start_stop_hidePage'>
 	<div data-role="header">
 		<h1>TripPlannr</h1>
+		<button class="logout">Log Out</button>
 	</div><!-- /header -->
 	
 	<input type='text' id='start_point' placeholder='start point' />
@@ -178,6 +179,7 @@
 	<div id='categories_hidePage'>
 	<div data-role="header">
 		<h1>Choose Categories</h1>
+		<button class="logout">Log Out</button>
 	</div><!-- /header -->
 		
 		<form id="categoryForm">
@@ -211,6 +213,7 @@
 	
 	<div data-role="header">
 		<h1>Your Trip!</h1>
+		<button class="logout">Log Out</button>
 	</div>
 	
 	<div id="mapLocation"></div>
